# starting-ragchatbot-codebase

./: .env.example  CLAUDE.md  README.md  frontend-changes.md  pyproject.toml  run.sh
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  config.py  document_processor.py  models.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
